fix(ZMS): Bugfix header logo overlap (#166)
* fix(ZMS): fix logo header banner from muenchen.de Update style.css

* feat(TV-57): implement altcha captcha (#164) (#165)

* feat(TV-57): install altcha

* feat(TV-57): add AltchaCaptcha component

* feat(TV-57): integrate AltchaCaptcha into ServiceFinder

* feat(TV-57): add office-service relations

* feat(TV-57): adjust fetchAvailableDays method
The request has been extended so that it now also sends a token if it is
available.

* feat(TV-57): adjust unit tests

* feat(TV-57): remove unnecessary blank lines

* feat(TV-57): adjust fetchAvailableTimeSlots method
The request has been extended so that it now also sends a token if it is
available.

* feat(TV-57): adjust reserveAppointment method
The request has been extended so that it now also sends a token if it is
available.

* feat(TV-57): add env variables

* feat(TV-57): cleanup AltchaCaptcha and add translations

* feat(TV-57): comment out logging

* feat(TV-57): remove friendly-captcha integration

* feat(TV-57): adjust error message in calendar

* feat(TV-57): set captchaToken after confirmation

* feat(TV-57): fix unit tests

* feat(TV-57): remove console logs

* feat(TV-57): adjust translations to prevent xss

* feat(TV-57): save captchaToken when fetching appointment


* fix(ZMS): logo header overlap Update style.css

* Update style.css

---------

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -81,6 +81,16 @@ p, span, div, button, td, th, .v-label, .v-list-item__title {
     color: #3a5368;
 }
 
+.m-breadcrumb-component {
+    margin-top: 33px;
+}
+
+@media (min-width: 1200px) {
+    .m-breadcrumb-component {
+        margin-top: 68px;
+    }
+}
+
 .button-submit {
     margin-right: 1rem;
     margin-top: 1rem;
